# RangeSearcher

./: README.md  pyproject.toml  rs_main.py  rs_main.spec  setup.py
RangeSearcher/: __init__.py  __main__.py
RangeSearcher.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
static/: rsstyle.css
templates/: rs_error.html  rs_forum.html  rs_noresults.html  rs_results.html  rs_saved.html
